-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
When fiemap is used with FIEMAP_FLAG_SYNC flag OST locks all spare regions one by one. It may lead to a deadlock with another client which tries to get write lock on a region covering 2 spare regions.
So scenario is following :
1) client 1 calls fiemap, OST locks first spare region
2) client 2 enqueues PW lock on whole file, it conflicts with first spare region
3) OST tries to lock second spare region, but it conflicts with PW waiting lock.